# radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  radar.docker.yaml  radar.example.yaml  radar.yaml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.claude/hooks/: block-edits.sh  run-tests.sh
.github/workflows/: ci.yml
docs/: TODO.md  developer-guide.md  phase3-ideas.md  scenarios.md  security.md  user-guide.md
docs/recipes/: daily-briefing.md  homelab-monitor.md  research-monitor.md
radar/: __init__.py  agent.py  cli.py  config.py  conversation_search.py  documents.py  export.py  feedback.py  hooks.py  hooks_builtin.py  llm.py  logging.py  memory.py  plugins.py  retry.py  scheduled_tasks.py  scheduler.py  security.py  semantic.py  skills.py  summaries.py  url_monitors.py  watchers.py
radar/config/: __init__.py  loader.py  paths.py  schema.py
radar/plugins/: __init__.py  hooks.py  loader.py  models.py  runner.py  sandbox.py  validator.py  versions.py
radar/tools/: __init__.py  analyze_feedback.py  calendar.py  create_tool.py  debug_tool.py  exec.py  github.py  list_directory.py  manage_documents.py  notify.py  pdf_extract.py  read_file.py  recall.py  remember.py  rollback_tool.py  scheduled_tasks.py  search_documents.py  skills.py  store_conversation_summary.py  suggest_personality.py  summarize_conversations.py  url_monitor.py  weather.py  web_search.py  write_file.py
radar/web/: __init__.py  routes.py
tests/: __init__.py  conftest.py  mock_llm.py  test_agent.py  test_calendar.py  test_cli_daemon.py  test_config.py  test_conversation_search.py  test_documents.py  test_export.py  test_feedback.py  test_hooks.py  test_hot_reload.py  test_integration.py  test_llm.py  test_memory.py  test_personality_directory.py  test_personality_frontmatter.py  test_plugins.py  test_retry.py  test_rss_reader.py  test_scheduled_tasks.py  test_scheduler.py  test_security.py  test_skills.py  test_summaries.py  test_tool_discovery.py  test_tool_framework.py  test_url_monitors.py  test_web_routes.py
(+33 files in other folders)
