[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radar"
version = "0.1.0"
description = "A local AI assistant with native Ollama tool calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "rich>=13.0",
]

[project.scripts]
radar = "radar.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["radar"]
